# code-tutor-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  update_templates.py
backend/alembic/: env.py
backend/alembic/versions/: 89089f1187c9_initial.py
backend/scripts/: seed_all.py  seed_all_remaining.py  seed_badges.py  seed_competition_problems.py  seed_fundamentals.py  seed_roadmap.py  seed_sample_problems.py  seed_sorting_problems.py  seed_string_basics.py  seed_typing_exercises.py  seed_users.py
backend/src/code_tutor/: __init__.py  main.py
backend/src/code_tutor/collaboration/: __init__.py
backend/src/code_tutor/collaboration/application/: __init__.py  dto.py  services.py
backend/src/code_tutor/collaboration/domain/: __init__.py  entities.py  repository.py  value_objects.py
backend/src/code_tutor/collaboration/infrastructure/: __init__.py  connection_manager.py  models.py  repository.py
backend/src/code_tutor/collaboration/interface/: __init__.py  http_routes.py  websocket_routes.py
backend/src/code_tutor/debugger/: __init__.py
backend/src/code_tutor/debugger/application/: __init__.py  dto.py  (+2 more)
backend/src/code_tutor/execution/: __init__.py
backend/src/code_tutor/gamification/: __init__.py
backend/src/code_tutor/identity/: __init__.py
backend/src/code_tutor/learning/: __init__.py
backend/src/code_tutor/ml/: __init__.py  config.py
backend/src/code_tutor/performance/: __init__.py
backend/src/code_tutor/playground/: __init__.py
backend/src/code_tutor/roadmap/: __init__.py
backend/src/code_tutor/scripts/: seed_problems.py
backend/src/code_tutor/shared/: __init__.py  api_response.py  config.py  constants.py  container.py  exception_handlers.py  exceptions.py  security.py
backend/src/code_tutor/tutor/: __init__.py
backend/src/code_tutor/typing_practice/: __init__.py
backend/src/code_tutor/visualization/: __init__.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_collaboration.py  test_container.py  test_dashboard.py  test_dashboard_service.py  test_debugger.py  test_domain_base.py  test_execution.py  test_execution_service.py  test_gamification.py  test_identity_services.py  test_learning_entities.py  test_learning_services.py  test_logging.py  test_ml_analysis.py  test_ml_pipeline.py  test_ml_prediction.py  test_ml_recommendation.py  test_performance.py  test_playground_entities.py  test_playground_repository.py  test_playground_services.py  test_problems.py  test_roadmap.py  test_roadmap_entities.py  test_roadmap_repository.py  test_roadmap_services.py  test_security.py  test_shared_modules.py  test_tutor.py  test_tutor_entities.py  test_tutor_llm.py  test_typing_entities.py  test_typing_repository.py  test_typing_services.py  test_visualization.py
(+340 files in other folders)
